--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -5,12 +5,12 @@
 <% end %>
 
 <% if @stock %>
-  <div class="well results-block">
-    <strong>Symbol: </strong> <%= @stock.ticker %>
+  <div id="stock-lookup-results" class="well results-block">
+    <strong>Symbol: </strong> {{stock.ticker}}
     <strong>Name: </strong> <%= @stock.name %>
     <strong>Price: </strong> <%= @stock.last_price %>
     <% if current_user.can_add_stock?(@stock.ticker) %>
-      <%= link_to "Add to my stocks", user_stocks_path(user: current_user, stock_ticker: @stock.ticker), 
+      <%= link_to "Add to my stocks", user_stocks_path(user: current_user, stock_ticker: @stock.ticker),
                                                     class: "btn btn-xs btn-success", method: :post %>
     <% else %>
       <span class="label label-default">
