--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -1,7 +1,7 @@
 <h1>My Portfolio</h1>
 
 <h3>Search for Stocks</h3>
-<div id="stock-lookup">
+<div id="stock-lookup" ng-controller="stocksController">
   <%= form_tag search_stocks_path, remote: true, method: :get, id: 'stock-lookup-form' do %>
     <div class="form-group row no-padding text-center col-md-12">
       <div class="col-md-10">
@@ -19,5 +19,3 @@
   <%= render 'result' %>
 </div>
 <%= render 'stocks/list' %>
-
-
